# spc_backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b1829c0d2d6_create_initial_tables.py
app/: config.py  main.py
app/db/: base_class.py  session.py
app/models/: __init__.py  problem.py  solution.py  world.py
app/schemas/: __init__.py  core.py  problem.py  solution.py  world.py
